# easy-fastapi-htmx

./: .env.example  LICENSE  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: dda736d3d1c5_initial_create_book_table.py
backend/app/: main.py
backend/app/core/: config.py
backend/app/db/: base.py  session.py
backend/app/dependencies/: deps.py
backend/app/domain/: entity.py  exception.py
backend/app/models/: __init__.py  book.py  mixins.py
backend/app/repository/: book.py
backend/app/routes/: book.py
backend/app/schemas/: book.py
backend/app/templates/: book_card.html  book_info.html  books_list.html  error.html  index.html  modal.html
backend/app/utils/: templates.py
