[project]
name = "projects"
version = "0.1.0"
description = "Онлайн-библиотека; проект создан в учебных целях"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.1",
    "jinja2>=3.1.6",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.0",
    "python-multipart>=0.0.27",
    "sqlalchemy>=2.0.49",
    "uvicorn[standard]>=0.46.0",
]
